Criação dos arquivos, ajeitamento dos textos, titulo e categorias. Cores de fundo e dos textos.

--- a/aula.html
+++ b/aula.html
@@ -23,6 +23,6 @@
             </div>
         </div>
         <h1 class="Title">Gian Marco</h1>
-    <h2 class="text"> oi</h2>
+    <h2 class="text"> oi, por aqui.</h2>
 </body>
 </html>
